force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/Multi_Mapping_V2_Conversion__c.object-meta.xml
<CustomObject>
    <description>SOX object - This object is used to store mapping for V1 to V2 conversions one to many scenarios. Pro bundles, Splitting V1 to H/W support and S/w Support etc ....Will impact pricing</description>
    <label>Multi Mapping V2 Conversion</label>
    <nameField>
        <label>Multi Mapping V2 Conversion	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multi Mapping V2 Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>