force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field specifies if the mapping is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>