force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/After_Conversion_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>After_Conversion_Product_Level__c</fullName>
    <label>Product Level on OLD Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hybrid Software</fullName>
            </value>
            <value>
                <fullName>Standalone Software Addon</fullName>
            </value>
            <value>
                <fullName>SaaS Software Addon</fullName>
            </value>
            <value>
                <fullName>LOD Software</fullName>
            </value>
            <value>
                <fullName>Addon</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Wrapper</fullName>
            </value>
            <value>
                <fullName>OnPrem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>