force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Enable_M365_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Enable_M365_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in M365 Renewals to check we need to populate the M365 Quantity Field on the USL Sku Quoteline  while converting the Old Skus</description>
    <label>Enable M365 Quantity</label>
    <type>Checkbox</type>
</CustomField>