force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Feature_Name_on_New_Product__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name_on_New_Product__c</fullName>
    <label>Feature Name on New Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>