force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Option_Level__c.field-meta.xml
<CustomField>
    <fullName>Option_Level__c</fullName>
    <label>Option Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>