force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Multi_Mapping_V2_Conversion__c</referenceTo>
    <relationshipLabel>Multi Mapping V2 Conversions</relationshipLabel>
    <relationshipName>Multi_Mapping_V2_Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>