force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Pricing_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Percent__c</fullName>
    <label>Pricing Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>