force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Quantity_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Multiplier__c</fullName>
    <label>Quantity Multiplier</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>