force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1 to V1</fullName>
            </value>
            <value>
                <fullName>V2 to V2</fullName>
            </value>
            <value>
                <fullName>V2 To V2 - Out Of Region</fullName>
            </value>
            <value>
                <fullName>V2 To V2 - In Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>