force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Source_Product__c.field-meta.xml
<CustomField>
    <fullName>Source_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Multi Mapping V2 Conversions (Source Product)</relationshipLabel>
    <relationshipName>Multi_Mapping_V2_Conversions2</relationshipName>
    <type>Lookup</type>
</CustomField>