force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Storage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Storage_Tier__c</fullName>
    <label>Storage Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>