force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>SE1</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>