force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Multi Mapping V2 Conversions (Target Product)</relationshipLabel>
    <relationshipName>Multi_Mapping_V2_Conversions1</relationshipName>
    <type>Lookup</type>
</CustomField>