force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Product__c</columns>
    <columns>Target_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>