force-app/main/default/objects/Multi_Mapping_V2_Conversion__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Source_Product__c</columns>
    <columns>Parent_Record__c</columns>
    <columns>Target_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Product__c</field>
        <operation>contains</operation>
        <value>RS-PB-EDG-PE-PP</value>
    </filters>
    <label>All</label>
</ListView>